Implement keyboard map scrolling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <canvas id='canvas' width='1280' height='720' border='1px'></canvas>
+    <canvas id='canvas' width='1280' height='720' border='1px' style='cursor: none;'></canvas>
     <div id="output"></div>
     <div id="fps"></div>
     <script
