Add support for animations. Animate and render the player sprite

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src='src/js/game.js'></script>
     <script src='src/js/tilemap.js'></script>
     <script src='src/js/map.js'></script>
+    <script src='src/js/animation.js'></script>
+    <script src='src/js/player.js'></script>
     <script src='src/js/rpg.js'></script>
    </body>
 </html>
