Create AssetManager. start game loop precisely when all assets are loaded

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
+    <script src='src/js/asset_manager.js'></script>
     <script src='src/js/game.js'></script>
     <script src='src/js/tilemap.js'></script>
     <script src='src/js/map.js'></script>
